--- a/layouts/index.html
+++ b/layouts/index.html
@@ -63,7 +63,7 @@ share the things I work on, as well as some of my personal interests. You can fi
 <h3>misc</h3>
 <ul>
     <li><a href="/brutal"> brutalist architecture</a></li>
-    <li>transportation photos</li>
+    {{/*  <li>transportation photos</li>  */}}
     <!-- <li>my origin story, open TTD</li> -->
 </ul>
 
