--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -48,7 +48,7 @@ li { margin: 0.4rem 0; }
 .w {
   max-width: 640px;
   margin: 0 auto;
-  padding: 4rem 2rem;
+  padding: 4rem 1rem;
 }
 
 hr {
@@ -101,6 +101,18 @@ img {
   display: block;
   margin: auto;
 }
+
+@media (max-width: calc(500px + 2rem)) {
+  /* Your styles for small screens go here */
+  img {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+  }
+
+}
+
+
 
 
 figcaption {
