center brutal list

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -147,6 +147,14 @@ figcaption {
   margin: auto;
 }
 
+.brutal{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
 .brutal img{
   margin: 0;
 }
+
